estoy sufriendo mucho, aiuda

--- a/assets/tic-tac-toe-socket-io-master/game.html
+++ b/assets/tic-tac-toe-socket-io-master/game.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Tic Tac Toe</title>
+		<title>Tic Tac Toe69
+			
+		</title>
 		<link rel="stylesheet" href="main.css">
 		<link rel="stylesheet" href="node_modules/skeleton-css/css/skeleton.css">
 	</head>
