--- a/assets/Juego-TTTO-prototipo/Página.html
+++ b/assets/Juego-TTTO-prototipo/Página.html
@@ -9,7 +9,7 @@
 	<div id="board"></div>
 	<br><br>
 	<select id="starting">
-		<option value="1">Human</option>
+		<option value="1">Humano</option>
 		<option value="0">Computer</option>
 	</select>
 	<select id="depth">
