--- a/assets/Juego-TTTO-prototipo/Página.html
+++ b/assets/Juego-TTTO-prototipo/Página.html
@@ -10,7 +10,7 @@
 	<br><br>
 	<select id="starting">
 		<option value="1">Humano</option>
-		<option value="0">Computer</option>
+		<option value="0">Computadora</option>
 	</select>
 	<select id="depth">
 		<option value="1">1</option>
