--- a/assets/Juego-TTTO-prototipo/Página.html
+++ b/assets/Juego-TTTO-prototipo/Página.html
@@ -20,6 +20,6 @@
 		<option value="-1">Unlimited</option>
 	</select>
 	<button id="newgame">New Game</button>
-	<script type="text/javascript" src="dist/bundle.js"></script>
+	<script type="text/javascript" src="prueba.js"></script>
 </body>
 </html>
